# fs-sharepoint

./: .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
src/fs/: __init__.py
src/fs/sharepointfs/: __init__.py  _sharepointfs.py  opener.py
tests/: conftest.py
tests/sharepointfs/: test__sharepointfs.py
